more work on accordion, ref #47

--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -72,6 +72,7 @@ Begin Buckshot Templates
 	        <treenode header='TabControl' tag='tabcontrol' />
 	     	<treenode header='TreeView' tag='treeview' />
 	     	<treenode header='DockPanel' tag='dockpanel' />
+	     	<treenode header='Accordion' tag='accordion' />
 	     	<treenode header='ListBox' tag='listbox' />
 	     	<treenode header='ModalDialog' tag='modaldialog' />
 	     	<treenode header='Popup' tag='popup' />
@@ -1395,6 +1396,19 @@ each list.
       </border> 
    </stack>
 </stack>
+</script>
+
+<script id='accordion' type='application/xml'>
+<accordion width='300'>
+  <accordionitem header='Header #1'>
+  </accordionitem>
+  <accordionitem header='Header #2'>
+  </accordionitem>
+  <accordionitem header='Header #3'>
+  </accordionitem>
+  <accordionitem header='Header #4'>
+  </accordionitem>
+</accordion>
 </script>
 
 <!--
