added plusone button to sandbox

--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -40,18 +40,18 @@ Begin Buckshot Templates
   </resourcecollection>
 
   <border padding='5' dockpanel.dock='top' background='{resource buckshotBlue}'>
-    <stack orientation='horizontal'>
-       <hyperlink valign='center' navigateto='http://www.buckshotui.org/'>
-	       <image width='35' sourceuri='apps/calculator/resources/buckshot_logo.png' alt='Buckshot Logo' />
-	       </hyperlink>
-       <textblock margin='0,0,0,5' valign='center' foreground='White' fontfamily='Arial' text='Buckshot Sandbox' />
-       <textblock margin='0,0,0,5' valign='bottom' foreground='White' fontsize='10' fontfamily='Arial' text='alpha' />
-    </stack>
+	    <stack orientation='horizontal'>
+	       <hyperlink valign='center' navigateto='http://www.buckshotui.org/'>
+		       <image width='35' sourceuri='apps/calculator/resources/buckshot_logo.png' alt='Buckshot Logo' />
+		       </hyperlink>
+	       <textblock margin='0,0,0,5' valign='center' foreground='White' fontfamily='Arial' text='Buckshot Sandbox' />
+	       <textblock margin='0,0,0,5' valign='bottom' foreground='White' fontsize='10' fontfamily='Arial' text='alpha' />
+	    </stack>
   </border>
 
   <stack margin='5' dockpanel.dock='left' minWidth='250'>
     <textblock maxwidth='250' fontfamily='Arial' text="Select a sample below, or create your own in the text area."/>
-    <border shadowcolor='Gray' shadowx='2' shadowy='2' shadowblur='3' valign='stretch' halign='stretch' background='White' borderthickness='1' bordercolor='LightGray' margin='0,5,0,0'>
+    <border shadowcolor='Gray' shadowx='2' shadowy='2' shadowblur='3' valign='stretch' halign='stretch' background='White' borderthickness='1' bordercolor='LightGray' margin='0,5,10,0'>
      	<accordion selectionmode='single' halign='stretch'>
      	   <accordionitem>
      	     <header>
@@ -133,6 +133,7 @@ Begin Buckshot Templates
      	   </accordionitem>   
      	</accordion>
     </border>
+	<plusone annotation='inline' width='200' size='medium' dockpanel.dock='right'></plusone>
   </stack>
   <dockpanel margin='5' dockpanel.dock='left' filllast='true' grid.column='1'>
   	<border 
