Added support for border styles in Border (ref #48)

--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -418,6 +418,12 @@ Begin Buckshot Templates
           </stack>
        </stack>
   </border>
+  <border margin='10' padding='10' borderstyle='dotted' borderthickness='5' bordercolor='SteelBlue' width='165'>
+    <textblock style='{resource defaultText}' halign='stretch'>
+    Borders support different line styles.
+    </textblock>
+  </border>
+
   <border style='{resource bStyle}' background="Green" width="250" height="250">
     <border style='{resource bStyle}' background="Blue" halign="stretch" valign="stretch">
       <border style='{resource bStyle}' background="Orange" halign="stretch" valign="stretch">
