--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -88,6 +88,7 @@ Begin Buckshot Templates
      	     </header>
      	     <body>
      	        <treeview on.treenodeselected='selection_handler'>
+     	            <treenode header='Menus' tag='menus' />
 			        <treenode header='TabControl' tag='tabcontrol' />
 			     	<treenode header='TreeView' tag='treeview' />
 			     	<treenode header='DockPanel' tag='dockpanel' />
@@ -1460,6 +1461,184 @@ each list.
          <youtube width='350' height='300' videoid='6DWP-E7omJs' />
       </accordionitem>
    </accordion>
+</stack>
+</script>
+
+<script id='menus' type='application/xml'>
+<stack halign='stretch'>
+  <textblock style='{resource headerText}' text='Buckshot supports simple text menus like below:' />
+  <menustrip halign='stretch'>
+    <menu header='File'>
+      <menuitem>
+  	     <icon>
+  	        <border width='20' height='20' background='Orange' />
+  	     </icon>
+  	     <header>
+  	        <textblock style='{resource defaultText}' text='Menu Item 1' />
+  	     </header>
+      </menuitem>
+      <menuitem header='Menu Item 2'>
+  	     <icon>
+           <border width='20' height='20' background='Green' />
+  	     </icon>
+      </menuitem>
+    </menu>
+    <menu header='View'>
+      <menuitem>
+  	     <icon>
+  	        <border width='20' height='20' background='Orange' />
+  	     </icon>
+  	     <header>
+  	        <textblock style='{resource defaultText}' text='Menu Item 1' />
+  	     </header>
+      </menuitem>
+      <menuitem header='Menu Item 2'>
+  	     <icon>
+            <border width='20' height='20' background='Green' />
+  	     </icon>
+    </menuitem>
+    </menu>
+    <menu header='Tools'>
+      <menuitem>
+  	     <icon>
+  	        <border width='20' height='20' background='Orange' />
+  	     </icon>
+  	     <header>
+  	        <textblock style='{resource defaultText}' text='Menu Item 1' />
+  	     </header>
+      </menuitem>
+      <menuitem header='Menu Item 2'>
+  	     <icon>
+            <border width='20' height='20' background='Green' />
+  	     </icon>
+    </menuitem>
+    </menu>
+    <menu header='Help'>
+      <menuitem>
+  	     <icon>
+  	        <border width='20' height='20' background='Orange' />
+  	     </icon>
+  	     <header>
+  	        <textblock style='{resource defaultText}' text='Menu Item 1' />
+  	     </header>
+      </menuitem>
+      <menuitem header='Menu Item 2'>
+  	     <icon>
+            <border width='20' height='20' background='Green' />
+  	     </icon>
+      </menuitem>
+    </menu>
+  </menustrip>
+  
+  <textblock style='{resource headerText}' text='It also supports more complex content menu strips...' />
+  
+  <menustrip halign='stretch'>
+  <menu>
+     <header>
+        <stack>
+           <image alt='demo image' sourceuri='http://www.lucastudios.com/Content/images/Certificate64.png' />
+           <textblock halign='center' fontsize='14' fontfamily='Arial' text='Files' />
+        </stack>
+     </header>
+      <menuitem>
+  	     <icon>
+  	        <border width='20' height='20' background='Orange' />
+  	     </icon>
+  	     <header>
+  	        <textblock style='{resource defaultText}' text='Menu Item 1' />
+  	     </header>
+      </menuitem>
+      <menuitem header='Menu Item 2'>
+  	     <icon>
+            <border width='20' height='20' background='Green' />
+  	     </icon>
+      </menuitem>
+  </menu>
+  <menu>
+     <header>
+        <stack>
+           <image alt='demo image' sourceuri='http://www.lucastudios.com/Content/images/ChartGantt64.png' />
+           <textblock halign='center' fontsize='14' fontfamily='Arial' text='Data' />
+        </stack>
+     </header>
+      <menuitem>
+  	     <icon>
+  	        <border width='20' height='20' background='Orange' />
+  	     </icon>
+  	     <header>
+  	        <textblock style='{resource defaultText}' text='Menu Item 1' />
+  	     </header>
+      </menuitem>
+      <menuitem header='Menu Item 2'>
+  	     <icon>
+            <border width='20' height='20' background='Green' />
+  	     </icon>
+      </menuitem>
+  </menu>
+  <menu>
+     <header>
+        <stack>
+           <image alt='demo image' sourceuri='http://www.lucastudios.com/Content/images/Connected64.png' />
+           <textblock halign='center' fontsize='14' fontfamily='Arial' text='Connection' />
+        </stack>
+     </header>
+      <menuitem>
+  	     <icon>
+  	        <border width='20' height='20' background='Orange' />
+  	     </icon>
+  	     <header>
+  	        <textblock style='{resource defaultText}' text='Menu Item 1' />
+  	     </header>
+      </menuitem>
+      <menuitem header='Menu Item 2'>
+  	     <icon>
+            <border width='20' height='20' background='Green' />
+  	     </icon>
+      </menuitem>
+  </menu>
+  <menu>
+     <header>
+        <stack>
+           <image alt='demo image' sourceuri='http://www.lucastudios.com/Content/images/MailBox64.png' />
+           <textblock halign='center' fontsize='14' fontfamily='Arial' text='Messages' />
+        </stack>
+     </header>
+      <menuitem>
+  	     <icon>
+  	        <border width='20' height='20' background='Orange' />
+  	     </icon>
+  	     <header>
+  	        <textblock style='{resource defaultText}' text='Menu Item 1' />
+  	     </header>
+      </menuitem>
+      <menuitem header='Menu Item 2'>
+  	     <icon>
+            <border width='20' height='20' background='Green' />
+  	     </icon>
+      </menuitem>
+  </menu>
+  <menu>
+     <header>
+        <stack>
+           <image alt='demo image' sourceuri='http://www.lucastudios.com/Content/images/WindowTriPaneSearch64.png' />
+           <textblock halign='center' fontsize='14' fontfamily='Arial' text='Search' />
+        </stack>
+     </header>
+      <menuitem>
+  	     <icon>
+  	        <border width='20' height='20' background='Orange' />
+  	     </icon>
+  	     <header>
+  	        <textblock style='{resource defaultText}' text='Menu Item 1' />
+  	     </header>
+      </menuitem>
+      <menuitem header='Menu Item 2'>
+  	     <icon>
+            <border width='20' height='20' background='Green' />
+  	     </icon>
+      </menuitem>
+  </menu>
+</menustrip>
 </stack>
 </script>
 
