fixed some bugs with modaldialog and todo list.

--- a/example/sandbox/sandbox.html
+++ b/example/sandbox/sandbox.html
@@ -1187,15 +1187,15 @@ each list.
   <textbox width='400' placeholder='Including input from the user' />
   <textblock margin='0,5' text='ModalDialog also supports buttons for everything from simple dialogs to multi-step wizards.' />
   <textblock margin='0,5' text='Here are some examples:' />
-  <stack background='Gray' orientation='horizontal'>
+  <stack orientation='horizontal'>
     <button content='Ok' />
     <button content='Cancel' />
   </stack>
-  <stack background='Gray' orientation='horizontal'>
+  <stack orientation='horizontal'>
     <button content='Yes' />
     <button content='No' />
   </stack>
-  <stack background='Gray' orientation='horizontal'>
+  <stack orientation='horizontal'>
     <button content='Next' />
     <button content='Back' />
     <button content='Finished' />
