--- a/example/starter_projects/starter_project/starter_project.html
+++ b/example/starter_projects/starter_project/starter_project.html
@@ -24,7 +24,7 @@
 	        <!--
 	        Referencing an png file from a relative path in the project.
 	        -->
-	        <image margin='5' halign='center' sourceuri='resources/buckshot_logo.png' height='50' />
+	        <image margin='5' halign='center' sourceuri='web/resources/buckshot_logo.png' height='50' />
 			
 			<!-- 
 			Data binding the 'text' property to a 'message' object in the view model 
@@ -37,13 +37,13 @@
 			    Setting the binding mode to 'twoway' so user input will write back to
 			    the 'entry' object in the view model.
 			    -->
-				<textbox placeholder='Enter something here...' text='{data entry, mode=twoway}' />
+				<textbox valign='center' placeholder='Enter something here...' text='{data entry, mode=twoway}' />
 			
 			    <!--
 			    Declaring a handler for the 'click' event.
 			    The handler will be wired up in the view model.
 			    -->
-				<button on.click='click_handler' content='Submit' />
+				<button margin='3' on.click='click_handler' content='Submit' />
 			</stack>
 			
 			<!-- 
@@ -55,7 +55,7 @@
 	</script>
 
     <!-- Dart Bootstrap -->	
-    <script type="application/dart" src="starter_project.dart"></script>
+    <script type="application/dart" src="web/starter_project.dart"></script>
     <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
   </body>
 </html>
