created a root README document for starter projects.

--- a/example/starter_projects/starter_project/starter_project.html
+++ b/example/starter_projects/starter_project/starter_project.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Buckshot Starter Template</title>
+    <title>Buckshot Starter Project</title>
   </head>
   <body style='margin:0px;padding:0px'>
   
