--- a/example/starter_projects/starter_project/starter_project.html
+++ b/example/starter_projects/starter_project/starter_project.html
@@ -6,47 +6,47 @@
     <title>Buckshot Starter Project</title>
   </head>
   <body style='margin:0px;padding:0px'>
-  
-    <!-- 
-    This div is where Buckshot renders to by default. 
+
+    <!--
+    This div is where Buckshot renders to by default.
     -->
 	<div id='BuckshotHost'></div>
-	
+
 	<!--
 	This is the main template for the application.
 	-->
 	<script id='main' type='application/xml'>
 	  <border halign='center' valign='center' borderthickness='3' bordercolor='SteelBlue'
 	  	 	  cornerradius='9' background='WhiteSmoke' padding='5'>
-	  	 	  
-	    <stack halign='center' valign='center' maxwidth='400'>
-	        
+
+	    <stack halign='center' valign='stretch' maxwidth='400'>
+
 	        <!--
 	        Referencing an png file from a relative path in the project.
 	        -->
-	        <image margin='5' halign='center' sourceuri='web/resources/buckshot_logo.png' height='50' />
-			
-			<!-- 
-			Data binding the 'text' property to a 'message' object in the view model 
+	        <image margin='5' sourceuri='web/resources/buckshot_logo.png' height='50' />
+
+			<!--
+			Data binding the 'text' property to a 'message' object in the view model
 			-->
 			<textblock margin='5' fontsize='24' fontfamily='Arial' halign='center' text='{data message}' />
-			
+
 			<stack halign='center' margin='5' orientation='horizontal'>
-			
-			    <!-- 
+
+			    <!--
 			    Setting the binding mode to 'twoway' so user input will write back to
 			    the 'entry' object in the view model.
 			    -->
 				<textbox valign='center' placeholder='Enter something here...' text='{data entry, mode=twoway}' />
-			
+
 			    <!--
 			    Declaring a handler for the 'click' event.
 			    The handler will be wired up in the view model.
 			    -->
 				<button margin='3' on.click='click_handler' content='Submit' />
 			</stack>
-			
-			<!-- 
+
+			<!--
 			Data binding the 'text' property to a 'result' object in the view model.
 			-->
 			<textblock halign='center' margin='5' fontsize='14' fontfamily='Arial' text='{data result}' />
@@ -54,7 +54,7 @@
 	  </border>
 	</script>
 
-    <!-- Dart Bootstrap -->	
+    <!-- Dart Bootstrap -->
     <script type="application/dart" src="web/starter_project.dart"></script>
     <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
   </body>
