--- a/example/starter_projects/switchy/switchy.html
+++ b/example/starter_projects/switchy/switchy.html
@@ -5,22 +5,29 @@
     <meta charset="utf-8">
     <title>Switchy</title>
   </head>
-  <body style='padding:0px;margin:0px'>
+
+  <!--
+  Placing the data-buckshot-resources attribute in the body tag will prompt
+  Buckshot to pre-load resources from the designated file uri.
+  -->
+  <body style='padding:0px;margin:0px'
+        data-buckshot-resources='web/views/templates/resources.xml'>
+
     <!-- This is the default rendering location for Buckshot -->
     <div id='BuckshotHost'></div>
 
 	<script type="application/dart" src="web/switchy.dart"></script>
-    <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
-    <script type="text/javascript">
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-33780650-1']);
-_gaq.push(['_trackPageview']);
+	<script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
+	<script type="text/javascript">
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-33780650-1']);
+			_gaq.push(['_trackPageview']);
 
-(function () {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-</script>
+			(function () {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+	</script>
   </body>
 </html>
